# rgbLedCube

./: README.md
board/: .gitignore  fp-lib-table  rgbLedCube  rgbLedCube-cache.lib  rgbLedCube-rescue.lib  rgbLedCube.kicad_pcb  rgbLedCube.pro  rgbLedCube.sch  sym-lib-table
board/MyFootprints.pretty/: Potentiometer-Alps.kicad_mod  USB_Micro_Conn_Reichelt.kicad_mod  USB_Micro_Conn_Reichelt_Version_2.kicad_mod
board/MyLogos.pretty/: Klaus_Logo_Big.kicad_mod  Klaus_Logo_Medium.kicad_mod  Klaus_Logo_Orig.kicad_mod  Klaus_Logo_Small.kicad_mod  Nature.kicad_mod  Skater_60x60.kicad_mod  Skater_62x62.kicad_mod
board/notes/: specs & mistakes.md
code/: CMakeLists.txt
code/pcbDebug/: main.cpp
code/pcbTest/: CMakeLists.txt  main.cpp
code/release/: CMakeLists.txt
code/release/src/: main.cpp
code/release/src/animations/: animations.cpp  animations.h
code/release/src/animations/continuousTransitions/: acrossAxis.h  betweenAxis.cpp  plainTransition.cpp  structs.h  vectorTransition.cpp
code/release/src/animations/cube/: cube.cpp  cube.h  movingCube.cpp
code/release/src/animations/function/: Graph.cpp  Graph.h  Plot.cpp  Plot.h  graph.cpp  graph.h  lissajous.cpp  plot.cpp  plot.h  wave.cpp
code/release/src/animations/miscellaneous/: basic.cpp  randomVocals.cpp
code/release/src/animations/plainTransitions/: rotations.cpp  slide.cpp  slide.h
code/release/src/animations/rain/: Drop.cpp  Drop.h  drop.cpp  drop.h  rain.cpp
code/release/src/animations/resources/vector/: Plain.cpp  Plain.h  Straight.cpp  Straight.h  plain.cpp  plain.h  straight.cpp  straight.h  vect.cpp  vect.h
code/release/src/animations/snake/: snake.cpp  snake.h  snakeFunction.cpp
code/release/src/hardware/: fast_hsv2rgb.h  fast_hsv2rgb_8bit.cpp  generalHardware.cpp  hardware.h  irCodes.h  led.c  led.h  timer.cpp  tlcController.cpp
code/release/src/interface/: Clock.cpp  Color.cpp  Frame.cpp  clock.cpp  clock.h  colour.cpp  colour.h  frame.cpp  frame.h  interface.h
code/release/test/: interfaceTest.cpp  interfaceTest.h
code/src/: config.h  main.cpp
code/src/animations/: animations.cpp  animations.h
code/src/animations/continuousTransitions/: acrossAxis.cpp  acrossAxis.h  betweenAxis.cpp  betweenAxis.h  plainTransition.cpp  plainTransition.h  structs.h  vectorTransition.cpp  vectorTransition.h
code/src/animations/cube/: Cube.cpp  Cube.h  movingCube.cpp
code/src/animations/function/: Graph.cpp  Graph.h  Plot.cpp  Plot.h  lissajous.cpp  wave.cpp
code/src/animations/miscellaneous/: basic.cpp  basic.h  randomVocals.cpp
code/src/animations/rain/: Drop.h  rain.cpp
code/src/animations/resources/vector/: Plain.cpp  Plain.h  Straight.cpp  Straight.h  Vec.cpp  Vec.h
code/src/animations/snake/: Snake.cpp  Snake.h  snakeFunction.cpp
code/src/hardware/: display.c  display.h  entry.h  entry.s  fast_hsv2rgb.h  generalHardware.c  hardware.c  hardware.h  irCodes.h  pinLayout.h  randomizer.c  randomizer.h  reset.h  reset.s  sleep.c  sleep.h  timer.c  tlcController.c
code/src/hardware/driver/: button.c  button.h  irReceiver.c  irReceiver.h  layerMosfets.c  layerMosfets.h  led.c  led.h  reset.c  reset.h  timer0.c  timer0.h  timer1.c  timer1.h  timer3.c  timer3.h  tlc5940.c  tlc5940.h  usart.c  usart.h
code/src/interface/: Clock.cpp  Clock.h  Color.cpp  Color.h  Frame.cpp  Frame.h  img_preset.h  interface.h
code/src/lib/: fast_hsv2rgb.h  fast_hsv2rgb_8bit.c
code/src/test/: interfaceTest.cpp  interfaceTest.h
documentation/: instructions.md
miscellaneous/: .gitignore  benchmarkResult.py  linearPwm.py
miscellaneous/testRgbLed/: testRgbLed.ino
